# lector

./: .gitignore  README.md  lector.slnx
.qwen/: settings.json
Lector.API/: Lector.API.csproj  Lector.API.sln  Program.cs  appsettings.json  scans.db
Lector.API/Controllers/: AuthController.cs  ScansController.cs
Lector.API/Data/: AppDbContext.cs
Lector.API/Dtos/: AuthDtos.cs  ProfileDtos.cs  ScanDto.cs
Lector.API/Migrations/: 20260323200153_InitialCreaate.Designer.cs  20260323200153_InitialCreaate.cs  20260328153509_AddIdentity.Designer.cs  20260328153509_AddIdentity.cs  20260328181757_AddRefreshToken.Designer.cs  20260328181757_AddRefreshToken.cs  AppDbContextModelSnapshot.cs
Lector.API/Models/: ApplicationUser.cs  Scan.cs
Lector.API/Services/: ScannerService.cs  TokenService.cs
Lector.API/Utils/: FileHasher.cs
lector-client/: index.html  package-lock.json  package.json  vite.config.ts
lector-client/src/: App.tsx  constants.ts  globals.css  index.css
lector-client/src/components/: MainLayout.tsx  RequireAuth.tsx  Titlebar.tsx
lector-client/src/components/ui/: alert.tsx  button.tsx
lector-client/src/context/: AuthContext.tsx
lector-client/src/pages/: LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  ScansPage.tsx  UploadPage.tsx
lector-client/src/types/: auth.ts  scan.ts
lector-client/src/utils/: apiFetch.ts  dateFormat.ts  fileValidation.ts
lector-scanner/: CMakeLists.txt  vcpkg.json
lector-scanner/src/: main.cpp
lector-scanner/src/image/: loader.cpp  loader.hpp
lector-scanner/src/ocr/: engine.cpp  engine.hpp
lector-scanner/src/processing/: processing.cpp  processing.hpp
scanner/: CMakeLists.txt  CMakeUserPresets.json  vcpkg.json
scanner/src/: main.cpp  scanner.cpp  scanner.h
scanner/src/processing/: processing.cpp  processing.hpp
